--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <h1>Beef Burgers with Onion Jam</h1>
-    <a href="images/burger.jpg">image de burger</a>
+    <img src="images/burger.jpg" alt="image de burger">
     <h2>Beef Burgers with Onion Jam</h2>
     <p>Onion jam in the meat patties, and again in the filling? 
         It doubles the fun. The cabbage, awakened by a little red wine
         vinegar, brings crunch and color thanks to its vibrant purple.
         We favor a cheese with a washed rind since it melts well in the heat.</p>  
-        <h2>Ingredients</h2>
+        <h3>Ingredients</h3>
         <ul>
             <li>1 lb (450 g) lean ground beef</li>
             <li>1 egg</li>
@@ -29,5 +29,20 @@
             <li>1 cup (25 g) arugula</li>
             <li>¼ cup (60 ml) onion jam</li>
         </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>In a bowl, combine the meat, egg, onion jam and coriander. 
+                Season with salt and pepper. With your hands, form the mixture into 4 patties. 
+                Place on a plate and brush with oil. Refrigerate.</li>
+                <li>Preheat the grill, setting the burners to high. Oil the grate.</li>
+                <li>In a bowl, combine the red cabbage and vinegar. Season with salt and pepper.
+                     Let sit for 10 minutes. Drain.</li>
+                <li>Meanwhile, grill the patties for 4 minutes on each side or until cooked through.
+                     Place the cheese on the patties and cook until it’s starting to melt. 
+                     Grill the inside of the hamburger buns.</li>
+                <li>Spread mustard and mayonnaise over the inside of the buns. 
+                    Divide the arugula and patties among the bun bottoms. Top with the onion jam and cabbage.
+                     Close with a bun top.</li>
+        </ol>
 </body>
 </html>
