--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
         <meta charset="UTF-8">
         <title>The Odin Recipes</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <a href="recipes/burger.html">Beef Burgers with Onion Jam</a>
+        <ul>
+            <li><a href="recipes/burger.html">Beef Burgers with Onion Jam</a></li>
+            <li><a href="recipes/Taco_Soup.html">Taco Soup</a> </li>
+            <li><a href="recipes/Stir-Fry_Beef.html">Beef Stir Fry</a></li> 
+        </ul>
     </head>
 
     <body>
