placed title on top of links

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
         <meta charset="UTF-8">
         <title>The Odin Recipes</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css"> 
+    </head>
+
+    <body>
+        <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/burger.html">Beef Burgers with Onion Jam</a></li>
             <li><a href="recipes/Taco_Soup.html">Taco Soup</a> </li>
             <li><a href="recipes/Stir-Fry_Beef.html">Beef Stir Fry</a></li> 
         </ul>
-    </head>
-
-    <body>
-        <h1>Odin Recipes</h1>
     </body>
 </html>
