--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Beef Burgers with Onion Jam</h1>
     <img src="images/burger.jpg" alt="image de burger">
-    <h2>Beef Burgers with Onion Jam</h2>
+    <h2>Description</h2>
     <p>Onion jam in the meat patties, and again in the filling? 
         It doubles the fun. The cabbage, awakened by a little red wine
         vinegar, brings crunch and color thanks to its vibrant purple.
