--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 id="home">Odin Recipes</h1>
         <ul>
             <li><a href="recipes/burger.html">Beef Burgers with Onion Jam</a></li>
             <li><a href="recipes/Taco_Soup.html">Taco Soup</a> </li>
