Styled and finished Odin Recipes

--- a/recipes/Taco_Soup.html
+++ b/recipes/Taco_Soup.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Taco soup recipe</title>
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-    <h1>Taco Soup</h1>
-    <img src="images/taco_soup.jpeg" alt="image of taco soup">
+    <h1 id="taco">Taco Soup</h1>
+    <img src="images/taco_soup.jpeg" alt="image of taco soup" class="img">
     <h2>Description</h2>
     <p>This quick and easy taco soup is made entirely in one pot and in less than 30 minutes. 
         Topped with cheese, avocado, and all the fixin's, this simple soup makes the perfect 
