--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burger recipe</title>
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-    <h1>Beef Burgers with Onion Jam</h1>
+    <h1 id="burger">Beef Burgers with Onion Jam</h1>
     <img src="images/burger.jpg" alt="image de burger">
     <h2>Description</h2>
     <p>Onion jam in the meat patties, and again in the filling? 
