--- a/recipes/Stir-Fry_Beef.html
+++ b/recipes/Stir-Fry_Beef.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quick Beef Stir-Fry recipe</title>
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-    <h1>Quick Beef Stir-Fry</h1>
-    <img src="images/Beef-Stir-Fry.jpg" alt="image of Beef Stir-Fry" width="400" height="400">
+    <h1 id="beef">Quick Beef Stir-Fry</h1>
+    <img src="images/Beef-Stir-Fry.jpg" alt="image of Beef Stir-Fry" class="img">
     <h2>Description</h2>
     <p>Need to use up some of your leftover vegetables and other pantry staple ingredients? 
         Look no further than a classic beef stir-fry. This beef and broccoli stir-fry comes together 
